<resources>
    <string name="app_name">iResponde Police</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_txt_login">Login</string>
    <string name="form_title">Police Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iresponde_report_tab">Report(s)</string>
    <string name="iresponde_profile_tab">Police Profile</string>
</resources>
