<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:padding="24dp"
        android:paddingTop="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/app_police_logo" />

        <TextView
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="82dp"
            android:text="@string/app_name" />

        <android.support.v7.widget.CardView
            app:contentPadding="16dp"
            app:cardElevation="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/form_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_email"
                    app:errorEnabled="true"
                    android:hint="@string/hint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_email"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_password"
                    app:passwordToggleEnabled="true"
                    app:errorEnabled="true"
                    android:hint="@string/hint_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btn_login"
                    android:text="@string/btn_txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>